Created separate folder for logo and background images, updated index.html and main.css

--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 #background {
-	background-image: url('images/background.jpeg');
+	background-image: url('Images2/background.jpeg');
 	height: 100vh;
 	width: 100vw;
 
