--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 #background {
-	background-image: url('Images2/background.jpg');
+	background-image: url('Images2/background.jpeg');
 	height: 100vh;
 	width: 100vw;
 
